Fixed minor error in manual

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -168,7 +168,7 @@ The functions
 \begin{align}
 [ \mathbf A, \mathbf{f\_vals}, \mathbf{stop\_vals} ] = \text{solve\_e\_lin\_alm}( \mathbf M, \tau, \lambda, \rho, iterations, tol ) \\
 [ \mathbf A, \mathbf{f\_vals}, \mathbf{stop\_vals} ] = \text{solve\_e\_lin\_extalm}( \mathbf M, \tau, \lambda, \rho, iterations, tol ) \\
-[ \mathbf A, \mathbf{f\_vals}, \mathbf{stop\_vals} ] = \text{solve\_e\_lin\_extalm}( \mathbf M, \tau, \lambda, \rho, iterations, tol )
+[ \mathbf A, \mathbf{f\_vals}, \mathbf{stop\_vals} ] = \text{solve\_e\_lin\_accalm}( \mathbf M, \tau, \lambda, \rho, iterations, tol )
 \end{align}
 solve the following
 \begin{align}
